--- a/webapp/view/BookList.view.xml
+++ b/webapp/view/BookList.view.xml
@@ -1,72 +1,96 @@
 <mvc:View
-        controllerName="org.ubb.books.controller.Booklist"
+        controllerName="org.ubb.books.controller.BookList"
         xmlns:mvc="sap.ui.core.mvc"
         xmlns:core="sap.ui.core"
         xmlns="sap.m">
 
     <Table id="idBooksTable"
            items="{
-			path: '/Z801_book_entity_daruSet',
+			path: '/BookSet',
 			sorter: {
 				path: 'Title'
 			}
 		}"
            growing="true"
            growingThreshold="10"
-           mode="SingleSelectLeft">
+           mode="SingleSelectLeft"
+    >
 
         <headerToolbar>
             <Toolbar>
+
+                <content>
+                    <Input id="inputTitle" width="20%" placeholder="Title"/>
+                    <DatePicker id="inputDateStart" width="20%" value=""/>
+                    <DatePicker id="inputDateEnd"   width="20%" value=""/>
+                    <Button
+                            press="onSearchButtonPressed"
+                            icon="sap-icon://filter"
+                    />
+                    <Button
+                            press="onSortButtonPressed"
+                            icon="sap-icon://sort"
+                    />
+                </content>
+
+                <ToolbarSeparator/>
+
                 <content>
                     <Button
-                            text="Delete"
-                            press="onDeleteBook"/>
+                            press="onInsertBook"
+                            icon="sap-icon://add-coursebook"
+                            type="Accept"
+                    />
                     <Button
-                            text="Add"
-                            press="onAddBook"/>
+                            press="onUpdateBook"
+                            icon="sap-icon://detail-view"
+                            type="Attention"
+                    />
                     <Button
-                            text="Update"
-                            press="onUpdateBook"/>
+                            press="onDeleteBook"
+                            icon="sap-icon://delete"
+                            type="Reject"
+                    />
+
                 </content>
             </Toolbar>
         </headerToolbar>
 
         <columns>
             <Column>
-                <Text text="Title"/>
+                <Text text="Title" />
             </Column>
             <Column>
-                <Text text="Author"/>
+                <Text text="Author" />
             </Column>
             <Column>
-                <Text text="Published on"/>
+                <Text text="Published on" />
             </Column>
             <Column>
-                <Text text="Language"/>
+                <Text text="Language" />
             </Column>
             <Column>
-                <Text text="Available books"/>
+                <Text text="Available" />
             </Column>
             <Column>
-                <Text text="Total books"/>
+                <Text text="Total" />
             </Column>
         </columns>
-
         <items>
             <ColumnListItem>
                 <cells>
                     <ObjectIdentifier
                             title="{Title}"
                             text="{Isbn}"/>
-                    <Text text="{Author}"/>
+                    <Text text="{Author}" />
                     <Text text="{
 							path: 'DatePublished',
 							type: 'sap.ui.model.type.Date'
                			}"
                     />
-                    <Text text="{Language}"/>
-                    <Text text="{= parseInt(${Availbooks}) }"/>
-                    <Text text="{= parseInt(${Totalbooks}) }"/>
+                    <Text text="{Language}" />
+                    <Text text="{= parseInt(${AvailableNumber}) }" />
+                    <Text text="{= parseInt(${TotalNumber}) }"/>
                 </cells>
             </ColumnListItem>
         </items>
